# bcpc-build

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  _setuplib.py  adduser.py  alembic.ini  bcpc-build-deps.sh  bootstrap.conf.example  do_load_config.py  extract_nets.py  init-build-area  init-build-area.py  lookup.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt  test.py  test_configfile.py  test_configure.py  test_enum.py  test_nt_generator.py  test_setup.py  test_v8_config.py  tox.ini
alembic/: env.py  script.py.mako
alembic/versions/: 028688a5e692_add_buildunit_table.py  54d51e8c569a_add_proper_build_state_enum_constraint_values.py  60a3f9fdb580_add_build_state_to_build_unit.py  6d897a5fabae_add_build_unit_table.py  80d8b75adb7e_create_build_unit_table.py  c45328521706_add_timestamp_metadata_to_build_unit.py
bcpc_build/: build_unit.py  build_unit_allocator.py  config.py  dec.py  exceptions.py  init-build-area.py  utils.py
bcpc_build/cmd/: bcpc_build.py  bcpc_build_unit.py  bootstrap.py  db.py  exceptions.py  logger.py  main.py  setup.py  unit.py
bcpc_build/cmd/unit/: __init__.py  config.py
bcpc_build/db/: migration_types.py  types.py  utils.py
bcpc_build/db/models/: build_unit.py
bcpc_build/net/: __init__.py
bcpc_build/unit/: __init__.py
bcpc_build/utils/: __init__.py  credentials.py  vbox.py
tests/: test_cli.py
