[metadata]
name = bcpc-build
summary = Tools to build chef-bcpc
description-file =
    README.rst
author = Kundai Andrew Midzi
author-email = 8375625+kamidzi@users.noreply.github.com
home-page = https://github.com/kamidzi/bcpc-build
url = https://github.com/kamidzi/bcpc-build
license = Apache Software License
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: Other Environment
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5


[files]
packages =
    bcpc_build

[entry_points]
console_scripts =
    cinder = cinderclient.shell:main

[wheel]
universal = 1
