[metadata]
name = bcpc-build
description = Tools to build chef-bcpc
description-file =
    README.rst
author = Kundai Andrew Midzi
author-email = 8375625+kamidzi@users.noreply.github.com
home-page = https://github.com/kamidzi/bcpc-build
url = https://github.com/kamidzi/bcpc-build
license = Apache Software License
setup_requires = setuptools_scm
install_requires =
  Click
  PyYAML
  SQLAlchemy
  SQLAlchemy-Utils
  alembic
  furl
  psutil
  pyvbox
  shortuuid
  terminaltables
python_requires = >=3
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: Other Environment
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Build Tools
    Topic :: System :: Installation/Setup

provides = bcpc_build

[files]
packages =
    bcpc_build

[wheel]
universal = 1
